; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_get_multivar_foreach.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_get_multivar_foreach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (i32**, %struct.TYPE_5__*)*, i32 (%struct.TYPE_5__*)* }

@GIT_ITEROVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_get_multivar_foreach(i32* %0, i8* %1, i8* %2, i32 (i32*, i8*)* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32 (i32*, i8*)*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_5__*, align 8
  %15 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 (i32*, i8*)* %3, i32 (i32*, i8*)** %10, align 8
  store i8* %4, i8** %11, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @git_config_multivar_iterator_new(%struct.TYPE_5__** %14, i32* %16, i8* %17, i8* %18)
  store i32 %19, i32* %12, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %5
  %22 = load i32, i32* %12, align 4
  store i32 %22, i32* %6, align 4
  br label %62

23:                                               ; preds = %5
  store i32 0, i32* %13, align 4
  br label %24

24:                                               ; preds = %40, %23
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i32 (i32**, %struct.TYPE_5__*)*, i32 (i32**, %struct.TYPE_5__*)** %26, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %29 = call i32 %27(i32** %15, %struct.TYPE_5__* %28)
  store i32 %29, i32* %12, align 4
  %30 = icmp eq i32 %29, 0
  br i1 %30, label %31, label %41

31:                                               ; preds = %24
  store i32 1, i32* %13, align 4
  %32 = load i32 (i32*, i8*)*, i32 (i32*, i8*)** %10, align 8
  %33 = load i32*, i32** %15, align 8
  %34 = load i8*, i8** %11, align 8
  %35 = call i32 %32(i32* %33, i8* %34)
  store i32 %35, i32* %12, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %40

37:                                               ; preds = %31
  %38 = load i32, i32* %12, align 4
  %39 = call i32 @git_error_set_after_callback(i32 %38)
  br label %41

40:                                               ; preds = %31
  br label %24

41:                                               ; preds = %37, %24
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 1
  %44 = load i32 (%struct.TYPE_5__*)*, i32 (%struct.TYPE_5__*)** %43, align 8
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %46 = call i32 %44(%struct.TYPE_5__* %45)
  %47 = load i32, i32* %12, align 4
  %48 = load i32, i32* @GIT_ITEROVER, align 4
  %49 = icmp eq i32 %47, %48
  br i1 %49, label %50, label %51

50:                                               ; preds = %41
  store i32 0, i32* %12, align 4
  br label %51

51:                                               ; preds = %50, %41
  %52 = load i32, i32* %13, align 4
  %53 = icmp eq i32 %52, 0
  br i1 %53, label %54, label %60

54:                                               ; preds = %51
  %55 = load i32, i32* %12, align 4
  %56 = icmp eq i32 %55, 0
  br i1 %56, label %57, label %60

57:                                               ; preds = %54
  %58 = load i8*, i8** %8, align 8
  %59 = call i32 @config_error_notfound(i8* %58)
  store i32 %59, i32* %12, align 4
  br label %60

60:                                               ; preds = %57, %54, %51
  %61 = load i32, i32* %12, align 4
  store i32 %61, i32* %6, align 4
  br label %62

62:                                               ; preds = %60, %21
  %63 = load i32, i32* %6, align 4
  ret i32 %63
}

declare dso_local i32 @git_config_multivar_iterator_new(%struct.TYPE_5__**, i32*, i8*, i8*) #1

declare dso_local i32 @git_error_set_after_callback(i32) #1

declare dso_local i32 @config_error_notfound(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
